# trackball

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  RELEASES.md  build.rs
.github/workflows/: build.yml
LICENSES/: BSD-2-Clause-Patent.md
c11/: .gitignore  Doxyfile  README.md  meson.build
c11/examples/: example.c
c11/src/: trackball.c  trackball.h
src/: bound.rs  clamp.rs  delta.rs  first.rs  fixed.rs  frame.rs  image.rs  lib.rs  orbit.rs  plane.rs  scale.rs  scene.rs  scope.rs  slide.rs  touch.rs
