[package]
name = "trackball"
version = "0.15.0"
rust-version = "1.71.0"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2021"
description = "Virtual Trackball Orbiting via the Exponential Map"
documentation = "https://docs.rs/trackball"
repository = "https://github.com/qu1x/trackball"
build = "build.rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
	"virtual-trackball",
	"exponential-map",
	"quaternion",
	"arcball",
	"camera",
]
categories = [
	"no-std",
	"graphics",
]
include = [
	"src/**/*.rs",
	"c11/src/**/*.[hc]",
	"build.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
heapless = { version = "0.8.0", default-features = false }
nalgebra = { version = "0.33.2", default-features = false, features = ["libm-force"] }
simba = { version = "0.9.0", default-features = false, features = ["libm"] }
approx = { version = "0.5.1", default-features = false }
serde = { version = "1.0.203", default-features = false, features = ["derive"], optional = true }
rkyv = { version = "0.7.45", default-features = false, optional = true }

[features]
glam = ["nalgebra/convert-glam029"]
serde = ["dep:serde", "nalgebra/serde-serialize-no-std", "simba/serde_serialize"]
rkyv = ["dep:rkyv", "nalgebra/rkyv-serialize-no-std", "simba/rkyv-serialize"]

[build-dependencies]
cc = { version = "1.1.31", optional = true }

[lints.rust]
missing-docs = "forbid"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
tabs-in-doc-comments = "allow"
similar_names = "allow"
